Added aljazeera services to hit aj API

--- a/SuperAPI/SuperAPI/Views/Home/Index.cshtml
+++ b/SuperAPI/SuperAPI/Views/Home/Index.cshtml
@@ -9,3 +9,7 @@
 <ul class="ApiList">
     <li>@Html.ActionLink("Hacker News", "Index", "HackerNewsStory")</li>
 </ul>
+
+<br />
+
+<h3>This site was built using newsAPI.org</h3>
