Aljazeera tab up and functional

--- a/SuperAPI/SuperAPI/Views/AljazeeraNews/Index.cshtml
+++ b/SuperAPI/SuperAPI/Views/AljazeeraNews/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<SuperAPI.Models.HackerNewsStoryModel>
+﻿@model IEnumerable<SuperAPI.Models.AljazeeraStoryModel>
 
 @{
     ViewBag.Title = "Index";
