--- a/SuperAPI/SuperAPI/Views/Home/Index.cshtml
+++ b/SuperAPI/SuperAPI/Views/Home/Index.cshtml
@@ -8,6 +8,7 @@
 
 <ul class="ApiList">
     <li>@Html.ActionLink("Hacker News", "Index", "HackerNewsStory")</li>
+    <li>@Html.ActionLink("Aljazeera", "Index", "AljazeeraNews")</li>
 </ul>
 
 <br />
