--- a/SuperAPI/SuperAPI/Views/Shared/_Layout.cshtml
+++ b/SuperAPI/SuperAPI/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Hacker News", "Index", "HackerNewsStory")</li>
+                    <li>@Html.ActionLink("Aljazeera", "Index", "AljazeeraNews")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
