BBC news api services and controller and view built, tested and functional.

--- a/SuperAPI/SuperAPI/Views/BbcNews/Index.cshtml
+++ b/SuperAPI/SuperAPI/Views/BbcNews/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<SuperAPI.Models.AljazeeraStoryModel>
+﻿@model IEnumerable<SuperAPI.Models.BBCStoryModel>
 
 @{
     ViewBag.Title = "Index";
 }
 
-<h2>Aljazeera Top Stories</h2>
+<h2>BBC Top Stories</h2>
 
 
 <table class="table">
