--- a/SuperAPI/SuperAPI/Views/Home/Index.cshtml
+++ b/SuperAPI/SuperAPI/Views/Home/Index.cshtml
@@ -9,8 +9,9 @@
 <ul class="ApiList">
     <li>@Html.ActionLink("Hacker News", "Index", "HackerNewsStory")</li>
     <li>@Html.ActionLink("Aljazeera", "Index", "AljazeeraNews")</li>
+    <li>@Html.ActionLink("BBC", "Index", "BbcNews")</li>
 </ul>
 
 <br />
 
-<h3>This site was built using newsAPI.org</h3>
+<h4>This site was built using newsAPI.org</h4>
