AP services, controller and view added and working to hit API

--- a/SuperAPI/SuperAPI/Views/Home/Index.cshtml
+++ b/SuperAPI/SuperAPI/Views/Home/Index.cshtml
@@ -7,9 +7,10 @@
 <hr />
 
 <ul class="ApiList">
-    <li>@Html.ActionLink("Hacker News", "Index", "HackerNewsStory")</li>
     <li>@Html.ActionLink("Aljazeera", "Index", "AljazeeraNews")</li>
+    <li>@Html.ActionLink("AP", "Index", "APNews")</li>
     <li>@Html.ActionLink("BBC", "Index", "BbcNews")</li>
+    <li>@Html.ActionLink("Hacker News", "Index", "HackerNewsStory")</li>
 </ul>
 
 <br />
