--- a/SuperAPI/SuperAPI/Views/Shared/_Layout.cshtml
+++ b/SuperAPI/SuperAPI/Views/Shared/_Layout.cshtml
@@ -22,9 +22,10 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Hacker News", "Index", "HackerNewsStory")</li>
                     <li>@Html.ActionLink("Aljazeera", "Index", "AljazeeraNews")</li>
+                    <li>@Html.ActionLink("AP", "Index", "APNews")</li>
                     <li>@Html.ActionLink("BBC", "Index", "BbcNews")</li>
+                    <li>@Html.ActionLink("Hacker News", "Index", "HackerNewsStory")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
