WSJ services, controller and view made and functional. Changing bootstrap theme. Didnt check if it is working yet.

--- a/SuperAPI/SuperAPI/Views/Shared/_Layout.cshtml
+++ b/SuperAPI/SuperAPI/Views/Shared/_Layout.cshtml
@@ -26,6 +26,7 @@
                     <li>@Html.ActionLink("AP", "Index", "APNews")</li>
                     <li>@Html.ActionLink("BBC", "Index", "BbcNews")</li>
                     <li>@Html.ActionLink("Hacker News", "Index", "HackerNewsStory")</li>
+                    <li>@Html.ActionLink("WSJ", "Index", "WsjNews")</li>
                     <li>@Html.ActionLink("About", "About", "Home")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
