--- a/SuperAPI/SuperAPI/Views/Home/Index.cshtml
+++ b/SuperAPI/SuperAPI/Views/Home/Index.cshtml
@@ -11,6 +11,7 @@
     <li>@Html.ActionLink("AP", "Index", "APNews")</li>
     <li>@Html.ActionLink("BBC", "Index", "BbcNews")</li>
     <li>@Html.ActionLink("Hacker News", "Index", "HackerNewsStory")</li>
+    <li>@Html.ActionLink("WSJ", "Index", "WsjNews")</li>
 </ul>
 
 <br />
