little flexbox on the front end to make it a little more user friendly

--- a/SuperAPI/SuperAPI/Content/Site.css
+++ b/SuperAPI/SuperAPI/Content/Site.css
@@ -22,3 +22,11 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.bigBox {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+}
