--- a/SuperAPI/SuperAPI/Views/Home/Index.cshtml
+++ b/SuperAPI/SuperAPI/Views/Home/Index.cshtml
@@ -1,19 +1,26 @@
 ﻿@{
-    ViewBag.Title = "Home Page";
+    ViewBag.Title = "Home";
 }
 
 
 <br />
 <hr />
 
-<ul class="ApiList">
-    <li>@Html.ActionLink("Aljazeera", "Index", "AljazeeraNews")</li>
-    <li>@Html.ActionLink("AP", "Index", "APNews")</li>
-    <li>@Html.ActionLink("BBC", "Index", "BbcNews")</li>
-    <li>@Html.ActionLink("Hacker News", "Index", "HackerNewsStory")</li>
-    <li>@Html.ActionLink("WSJ", "Index", "WsjNews")</li>
-</ul>
+<div class="bigBox">
+    <div class="apiImg">
+        <img src="/Images/api.jpg" width="300" />
+    </div>
+    <div class="apiUl">
+        <ul class="ApiList">
+            <li>@Html.ActionLink("Aljazeera", "Index", "AljazeeraNews")</li>
+            <li>@Html.ActionLink("AP", "Index", "APNews")</li>
+            <li>@Html.ActionLink("BBC", "Index", "BbcNews")</li>
+            <li>@Html.ActionLink("Hacker News", "Index", "HackerNewsStory")</li>
+            <li>@Html.ActionLink("WSJ", "Index", "WsjNews")</li>
+        </ul>
+    </div>
+</div>
 
 <br />
 
-<h4>This site was built using newsAPI.org</h4>
+<h5>*This site was built using newsAPI.org</h5>
