--- a/SuperAPI/SuperAPI/Views/WsjNews/Index.cshtml
+++ b/SuperAPI/SuperAPI/Views/WsjNews/Index.cshtml
@@ -9,42 +9,19 @@
 
 
 <table class="table">
-    <tr>
-        <th>
-            @Html.DisplayNameFor(model => model.Author)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Title)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Url)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.ImgUrl)
-        </th>
-        <th></th>
-    </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.Author)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.Title)
-        </td>
-        <td>
-            <a href="@Html.DisplayFor(modelItem => item.Url)">Link</a>
-        </td>
-        <td>
-            <img src="@Html.DisplayFor(modelItem => item.ImgUrl)" width="100"/>
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                <img src="@Html.DisplayFor(modelItem => item.ImgUrl)" height="100" />
+            </td>
+            <td>
+                <a href="@Html.DisplayFor(modelItem => item.Url)">@Html.DisplayFor(modelItem => item.Title)</a>
+                <p></p>
+                <h5>@Html.DisplayFor(modelItem => item.Author)</h5>
+            </td>
+        </tr>
+    }
 
 </table>
