quick info update on generic about and contact pages.

--- a/SuperAPI/SuperAPI/Views/Home/About.cshtml
+++ b/SuperAPI/SuperAPI/Views/Home/About.cshtml
@@ -4,4 +4,5 @@
 <h2>@ViewBag.Title.</h2>
 <h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<p>This is just a project to play around with API's in one place.</p>
+<h4><a href="www.jeffreyPlongo.com">JeffreyPLongo.com</a></h4>
