--- a/SuperAPI/SuperAPI/Views/Shared/_Layout.cshtml
+++ b/SuperAPI/SuperAPI/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - SuperAPI</title>
+    <title>@ViewBag.Title - JeffNewsAPI</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
@@ -21,7 +21,6 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Aljazeera", "Index", "AljazeeraNews")</li>
                     <li>@Html.ActionLink("AP", "Index", "APNews")</li>
                     <li>@Html.ActionLink("BBC", "Index", "BbcNews")</li>
