--- a/SuperAPI/SuperAPI/Views/Home/Index.cshtml
+++ b/SuperAPI/SuperAPI/Views/Home/Index.cshtml
@@ -6,7 +6,18 @@
 <br />
 <hr />
 
+
 <div class="bigBox">
+        <marquee behavior="scroll" bgcolor="yellow" loop="-1" width="30%">
+            <i>
+                <font color="blue">
+                    Today's date is :
+                    <strong>
+                        <span id="time"></span>
+                    </strong>
+                </font>
+            </i>
+        </marquee>
     <div class="apiImg">
         <img src="/Images/api.jpg" width="300" />
     </div>
